Performed Abstraction, Encapsulation and Instance Initialization Block

--- a/src/objectOrientedJava/.gitignore
+++ b/src/objectOrientedJava/.gitignore
@@ -9,3 +9,10 @@
 /Car.class
 /Vehicle.class
 /Inheritance.class
+/Tester.class
+/InstanceInit.class
+/Abstraction.class
+/Employee.class
+/Salary.class
+/Encapsulation.class
+/EncapTest.class
