Completed about packages, interfaces, arrays, string

--- a/src/objectOrientedJava/.gitignore
+++ b/src/objectOrientedJava/.gitignore
@@ -16,3 +16,8 @@
 /Salary.class
 /Encapsulation.class
 /EncapTest.class
+/Interfaces.class
+/Event.class
+/Football.class
+/Hockey.class
+/Sports.class
