Completed exception handling

--- a/src/exceptions_and_errors/.gitignore
+++ b/src/exceptions_and_errors/.gitignore
@@ -1,1 +1,4 @@
 /JavaExceptions.class
+/JavaExceptions$InsufficientFundsException.class
+/JavaExceptions$RemoteException.class
+/JavaExceptions$NewException.class
