Completed Multithreading, and thread concepts in Java

--- a/src/multithreadingJava/.gitignore
+++ b/src/multithreadingJava/.gitignore
@@ -4,3 +4,7 @@
 /JoiningThreads.class
 /RunnableDemoJoin.class
 /ThreadPools.class
+/ThreadPools$Task.class
+/SynchronizedThread.class
+/PrintDemo.class
+/ThreadDemoSyn.class
