--- a/src/collections_java/.gitignore
+++ b/src/collections_java/.gitignore
@@ -1,7 +1,1 @@
-/ListJava.class
-/Student.class
-/SetList.class
-/ColorComparator.class
-/AgeComparator.class
-/NameComparator.class
-/MapJava.class
+*.class
